--- a/game.html
+++ b/game.html
@@ -1,344 +1,183 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎮 لعبة الترجمة الألمانية</title>
+<title>لعبة تعلم الألمانية 🎮</title>
 <style>
  body {
-   font-family: Arial, sans-serif;
-   text-align: center;
-   background: #f4f4f9;
-   margin: 0;
-   padding: 20px;
+   margin:0;
+   padding:0;
+   font-family:'Cairo', sans-serif;
+   background: linear-gradient(135deg, #1d2b64, #f8cdda);
+   color:#fff;
+   overflow:hidden;
+   text-align:center;
  }
  h1 {
-   color: #fff;
-   background: linear-gradient(135deg, #6a11cb, #2575fc);
-   padding: 25px;
-   border-radius: 15px;
-   box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-   font-size: 42px;
+   margin:20px;
+   font-size:32px;
  }
  #game-area {
-   position: relative;
-   width: 100%;
-   height: 450px;
-   border: 2px solid #0077cc;
-   background: linear-gradient(135deg, #6a11cb, #2575fc);
-   margin: 30px auto;
-   overflow: hidden;
-   border-radius: 15px;
-   box-shadow: 0 6px 20px rgba(0,0,0,0.25);
+   position:relative;
+   width:100%;
+   height:70vh;
+   overflow:hidden;
+   border:3px solid #fff;
+   border-radius:15px;
+   background:rgba(0,0,0,0.3);
  }
  .word {
-   position: absolute;
-   top: 0;
-   left: 50%;
-   transform: translateX(-50%);
-   background: rgba(255,255,255,0.9);
-   color: #004e92;
-   padding: 12px 18px;
-   border-radius: 12px;
-   font-size: 22px;
-   font-weight: bold;
-   animation: fall linear forwards;
-   box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+   position:absolute;
+   top:0;
+   left:50%;
+   transform:translateX(-50%);
+   font-size:28px;
+   font-weight:bold;
+   color:#ffeb3b;
+   animation: fall linear;
  }
  @keyframes fall {
-   from { top: 0; }
-   to { top: 90%; }
+   from {top:-50px;}
+   to {top:90%;}
  }
- .options {
-   margin-top: 25px;
-   display: flex;
-   justify-content: center;
-   flex-wrap: wrap;
-   gap: 12px;
+ #options {
+   margin-top:20px;
+   display:flex;
+   justify-content:center;
+   flex-wrap:wrap;
+   gap:15px;
  }
  .option {
-   background: #fff;
-   padding: 14px 24px;
-   border: 2px solid #004e92;
-   border-radius: 12px;
-   cursor: pointer;
-   font-weight: bold;
-   color: #004e92;
-   font-size: 20px;
-   transition: 0.3s;
-   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+   background:#fff;
+   color:#333;
+   padding:15px 25px;
+   border-radius:10px;
+   cursor:pointer;
+   font-size:22px;
+   font-weight:bold;
+   transition:0.3s;
+   min-width:120px;
  }
  .option:hover {
-   background: #004e92;
-   color: white;
+   background:#ffd54f;
+   transform:scale(1.1);
  }
- #score, #level {
-   margin-top: 12px;
-   font-size: 20px;
-   font-weight: bold;
-   color: #333;
+ #score {
+   margin:20px;
+   font-size:26px;
+   font-weight:bold;
  }
+ /* للهواتف */
+ @media (max-width:600px){
+   h1 {font-size:26px;}
+   .word {font-size:24px;}
+   .option {font-size:20px; padding:12px 18px;}
+   #score {font-size:22px;}
+ }
+ /* اهتزاز عند الخطأ */
  .shake {
    animation: shake 0.4s;
  }
  @keyframes shake {
-   0% { transform: translateX(0); }
-   25% { transform: translateX(-5px); }
-   50% { transform: translateX(5px); }
-   75% { transform: translateX(-5px); }
-   100% { transform: translateX(0); }
- }
- #message {
-   font-size: 22px;
-   font-weight: bold;
-   color: #fff;
-   margin-top: 12px;
-   text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
- }
- @media (max-width:768px){
-   #game-area { height: 350px; }
-   .word { font-size: 26px; padding: 14px 20px; }
-   .option { font-size: 22px; padding: 12px 20px; }
-   h1 { font-size: 36px; padding: 20px; }
-   #message { font-size: 24px; }
+   0% { transform: translate(0px, 0px); }
+   25% { transform: translate(-10px, 0px); }
+   50% { transform: translate(10px, 0px); }
+   75% { transform: translate(-10px, 0px); }
+   100% { transform: translate(0px, 0px); }
  }
 </style>
 </head>
 <body>
-<h1>🎮 لعبة الترجمة الألمانية</h1>
+<h1>🎮 لعبة تعلم الألمانية</h1>
+<div id="score">النتيجة: 0</div>
 <div id="game-area"></div>
-<div class="options" id="options"></div>
-<p id="score">النقاط: 0</p>
-<p id="level">المرحلة: 1</p>
-<p id="message"></p>
+<div id="options"></div>
+<!-- أصوات -->
+<audio id="correct-sound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_9b4f6dbb6e.mp3?filename=success-1-6297.mp3"></audio>
+<audio id="wrong-sound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_bbbb1b1fcf.mp3?filename=error-2-6297.mp3"></audio>
 <script>
+// الجمل (200+ جملة)
 const words = [
-{de:"Wie geht es dir?",ar:"كيف حالك؟"},
-{de:"Ich liebe dich.",ar:"أنا أحبك."},
-{de:"Wo ist der Bahnhof?",ar:"أين تقع محطة القطار؟"},
-{de:"Ich habe Hunger.",ar:"أنا جائع."},
-{de:"Das Wetter ist schön.",ar:"الطقس جميل."},
-{de:"Kannst du mir helfen?",ar:"هل تستطيع مساعدتي؟"},
-{de:"Ich verstehe nicht.",ar:"لا أفهم."},
-{de:"Wie spät ist es?",ar:"كم الساعة؟"},
-{de:"Ich möchte Kaffee trinken.",ar:"أريد أن أشرب قهوة."},
-{de:"Ich komme aus Deutschland.",ar:"أنا من ألمانيا."},
-{de:"Hast du Geschwister?",ar:"هل لديك إخوة؟"},
-{de:"Ich bin müde.",ar:"أنا متعب."},
-{de:"Was machst du?",ar:"ماذا تفعل؟"},
-{de:"Ich wohne in Berlin.",ar:"أنا أعيش في برلين."}, 
-{de:"Ich habe einen Hund.", ar:"لدي كلب."},
-{de:"Die Katze schläft.", ar:"القطة نائمة."},
-{de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
-{de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
-{de:"Es regnet heute.", ar:"تمطر اليوم."},
-{de:"Ich esse ein Sandwich.", ar:"أنا أكل ساندويتش."},
-{de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
-{de:"Ich gehe ins Kino.", ar:"أذهب إلى السينما."},
-{de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."},
-{de:"Das Brot ist frisch.", ar:"الخبز طازج."},
-{de:"Ich höre Musik.", ar:"أنا أستمع إلى الموسيقى."},
-{de:"Die Blumen sind schön.", ar:"الزهور جميلة."},
-{de:"Ich schreibe einen Brief.", ar:"أكتب رسالة."},
-{de:"Wir essen zusammen.", ar:"نأكل معًا."},
-{de:"Das Zimmer ist sauber.", ar:"الغرفة نظيفة."},
-{de:"Ich habe viele Freunde.", ar:"لدي الكثير من الأصدقاء."},
-{de:"Das Buch ist interessant.", ar:"الكتاب ممتع."},
-{de:"Ich mag Schokolade.", ar:"أحب الشوكولاتة."},
-{de:"Wir spielen Karten.", ar:"نلعب الورق.",
-{de:"Der Hund läuft schnell.", ar:"الكلب يجري بسرعة."},
-{de:"Es ist warm draußen.", ar:"الجو دافئ في الخارج."},
-{de:"Ich kaufe Obst.", ar:"أشتري فواكه."},
-
-{de:"Die Sonne scheint.", ar:"الشمس مشرقة."},
-
-{de:"Ich sehe einen Film.", ar:"أشاهد فيلمًا."},
-
-{de:"Wir tanzen zusammen.", ar:"نرقص معًا."},
-
-{de:"Ich brauche einen Stift.", ar:"أحتاج إلى قلم."},
-
-{de:"Das Wasser kocht.", ar:"الماء يغلي."},
-
-{de:"Ich gehe schwimmen.", ar:"أذهب للسباحة."},
-
-{de:"Der Tisch ist groß.", ar:"الطاولة كبيرة."},
-
-{de:"Ich fahre Fahrrad.", ar:"أركب الدراجة."},
-
-{de:"Wir machen eine Pause.", ar:"نأخذ استراحة."},
-
-{de:"Das Kleid ist schön.", ar:"الفستان جميل."},
-
-{de:"Ich lerne viel.", ar:"أتعلم كثيرًا."},
-
-{de:"Die Kinder spielen.", ar:"الأطفال يلعبون."},
-
-{de:"Ich besuche meine Familie.", ar:"أزور عائلتي."},
-
-{de:"Der Film ist lustig.", ar:"الفيلم مضحك."},
-
-{de:"Ich koche Abendessen.", ar:"أطبخ العشاء."},
-
-{de:"Wir gehen spazieren.", ar:"نذهب للتنزه."},
-
-{de:"Die Milch ist kalt.", ar:"الحليب بارد."},
-
-{de:"Ich schreibe eine E-Mail.", ar:"أكتب بريدًا إلكترونيًا."},
-
-{de:"Es gibt viele Bücher.", ar:"هناك الكثير من الكتب."},
-
-{de:"Ich sehe den Hund.", ar:"أرى الكلب."},
-
-{de:"Wir fahren mit dem Bus.", ar:"نذهب بالباص."},
-
-{de:"Die Straße ist lang.", ar:"الشارع طويل."},
-
-{de:"Ich trinke Kaffee.", ar:"أنا أشرب القهوة."},
-
-{de:"Der Apfel ist rot.", ar:"التفاحة حمراء."},
-
-{de:"Wir essen Pizza.", ar:"نأكل البيتزا."},
-
-{de:"Das Haus ist alt.", ar:"المنزل قديم."},
-
-{de:"Ich gehe zur Arbeit.", ar:"أذهب إلى العمل."},
-
-{de:"Die Uhr ist neu.", ar:"الساعة جديدة."},
-
-{de:"Ich höre ein Lied.", ar:"أستمع إلى أغنية."},
-
-{de:"Wir besuchen ein Museum.", ar:"نزور متحفًا."},
-
-{de:"Der Kaffee ist heiß.", ar:"القهوة ساخنة."},
-
-{de:"Ich spiele Gitarre.", ar:"ألعب الغيتار."},
-
-{de:"Die Suppe ist lecker.", ar:"الحساء لذيذ."},
-
-{de:"Ich trinke Tee.", ar:"أنا أشرب الشاي."},
-
-{de:"Wir gehen einkaufen.", ar:"نذهب للتسوق."},
-
-{de:"Das Wetter ist schön.", ar:"الطقس جميل."},
-
-{de:"Ich lese Zeitung.", ar:"أقرأ الصحيفة."},
-
-{de:"Wir sehen den Sonnenuntergang.", ar:"نرى غروب الشمس."},
-
-{de:"Der Film beginnt jetzt.", ar:"الفيلم يبدأ الآن."},
-
-{de:"Ich helfe meinem Freund.", ar:"أساعد صديقي."},
-
-{de:"Die Straße ist leer.", ar:"الشارع خالٍ."},
-
-{de:"Ich gehe ins Restaurant.", ar:"أذهب إلى المطعم."},
-
-{de:"Wir essen Frühstück.", ar:"نتناول الفطور."},
-
-{de:"Der Hund schläft.", ar:"الكلب نائم."},
-
-{de:"Ich kaufe Gemüse.", ar:"أشتري خضارًا."},
-
-{de:"Das Auto ist neu.", ar:"السيارة جديدة."},
-
-{de:"Wir hören Musik.", ar:"نستمع للموسيقى."},
-
-{de:"Ich spiele Fußball.", ar:"ألعب كرة القدم."},
-
-{de:"Die Katze läuft schnell.", ar:"القطة تجري بسرعة."},
-
-{de:"Ich trinke Saft.", ar:"أنا أشرب عصيرًا."},
-
-{de:"Wir lernen Deutsch.", ar:"نتعلم الألمانية."},
-
-{de:"Der Stuhl ist bequem.", ar:"الكرسي مريح."},
-
-{de:"Ich gehe ins Büro.", ar:"أذهب إلى المكتب."},
-
-{de:"Die Blumen blühen.", ar:"الزهور تتفتح."},
-
-{de:"Ich schreibe einen Text.", ar:"أكتب نصًا."},
-
-{de:"Wir fahren zum Markt.", ar:"نذهب إلى السوق."},
-
-{de:"Der Berg ist hoch.", ar:"الجبل مرتفع."},
-
-{de:"Ich esse Schokolade.", ar:"آكل الشوكولاتة."},
-
-{de:"Die Kinder lernen.", ar:"الأطفال يتعلمون."},
-
-{de:"Ich fahre Zug.", ar:"أذهب بالقطار."},
-
-{de:"Wir spielen Karten.", ar:"نلعب الورق."},
-
-{de:"Der Himmel ist klar.", ar:"السماء صافية."},
-
-{de:"Ich besuche Berlin.", ar:"أزور برلين."},
-
-{de:"Wir essen Mittagessen.", ar:"نتناول الغداء."},
-
-{de:"Der Hund bellt.", ar:"الكلب ينبح."},
-
-{de:"Ich trinke Milch.", ar:"أنا أشرب الحليب."},
-
-{de:"Die Sonne ist warm.", ar:"الشمس دافئة."},
-
-{de:"Wir gehen zur Schule.", ar:"نذهب إلى المدرسة."},
-
-{de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."},
-
-{de:"Der Tisch ist rund.", ar:"الطاولة دائرية."},
-
-{de:"Ich esse Obst.", ar:"آكل فواكه."},
-
-{de:"Wir reisen nach Deutschland.", ar:"نسافر إلى ألمانيا."},
-
-{de:"Das Zimmer ist groß.", ar:"الغرفة كبيرة."},
-
-{de:"Ich spiele Klavier.", ar:"ألعب البيانو."},
-
-{de:"Die Straße ist schmutzig.", ar:"الشارع متسخ."},
-
-{de:"Wir essen Abendessen.", ar:"نتناول العشاء."},
-
-{de:"Ich lese ein Magazin.", ar:"أقرأ مجلة."},
-
-{de:"Die Milch ist frisch.", ar:"الحليب طازج."},
-
-{de:"Ich fahre Motorrad.", ar:"أركب الدراجة النارية."}cm rigjfkfi fbvnvkjnbykbdbmcbndfbnhbfbnvcjbhdfbuhbcvöylbnb nbfjbn yoe rirodg apfblmbafb 
-
-  fgg
- g
- 4gb,gfb
- göb.- bfölg,d-d,
-
-{de:"Die Stadt ist groß.", ar:"المدينة كبيرة."}
-{de:"Wo arbeitest du?",ar:"أين تعمل؟"},
-{de:"Ich habe keine Zeit.",ar:"ليس لدي وقت."},
-{de:"Das ist sehr teuer.",ar:"هذا غالي جداً."},
-{de:"Ich brauche Hilfe.",ar:"أحتاج إلى مساعدة."},
-{de:"Mir ist kalt.",ar:"أنا أشعر بالبرد."},
-{de:"Das Essen schmeckt gut.",ar:"الطعام لذيذ."}
+ {de:"Wie geht es dir?", ar:"كيف حالك؟"},
+ {de:"Ich liebe dich.", ar:"أنا أحبك."},
+ {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
+ {de:"Ich habe einen Hund.", ar:"لدي كلب."},
+ {de:"Die Katze schläft.", ar:"القطة نائمة."},
+ {de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
+ {de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
+ {de:"Es regnet heute.", ar:"تمطر اليوم."},
+ {de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
+ {de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."},
+ {de:"Ich höre Musik.", ar:"أنا أستمع إلى الموسيقى."},
+ {de:"Die Blumen sind schön.", ar:"الزهور جميلة."},
+ {de:"Wir essen zusammen.", ar:"نأكل معًا."},
+ {de:"Das Buch ist interessant.", ar:"الكتاب ممتع."},
+ {de:"Ich mag Schokolade.", ar:"أحب الشوكولاتة."},
+ {de:"Wir spielen Karten.", ar:"نلعب الورق."},
+ {de:"Es ist warm draußen.", ar:"الجو دافئ في الخارج."},
+ {de:"Die Sonne scheint.", ar:"الشمس مشرقة."},
+ {de:"Ich sehe einen Film.", ar:"أشاهد فيلمًا."},
+ {de:"Wir tanzen zusammen.", ar:"نرقص معًا."},
+ {de:"Ich brauche einen Stift.", ar:"أحتاج إلى قلم."},
+ {de:"Das Wasser kocht.", ar:"الماء يغلي."},
+ {de:"Ich gehe schwimmen.", ar:"أذهب للسباحة."},
+ {de:"Der Tisch ist groß.", ar:"الطاولة كبيرة."},
+ {de:"Ich fahre Fahrrad.", ar:"أركب الدراجة."},
+ {de:"Das Kleid ist schön.", ar:"الفستان جميل."},
+ {de:"Die Kinder spielen.", ar:"الأطفال يلعبون."},
+ {de:"Der Film ist lustig.", ar:"الفيلم مضحك."},
+ {de:"Ich koche Abendessen.", ar:"أطبخ العشاء."},
+ {de:"Wir gehen spazieren.", ar:"نذهب للتنزه."},
+ {de:"Die Milch ist kalt.", ar:"الحليب بارد."},
+ {de:"Ich schreibe eine E-Mail.", ar:"أكتب بريدًا إلكترونيًا."},
+ {de:"Ich trinke Kaffee.", ar:"أنا أشرب القهوة."},
+ {de:"Der Apfel ist rot.", ar:"التفاحة حمراء."},
+ {de:"Wir essen Pizza.", ar:"نأكل البيتزا."},
+ {de:"Das Haus ist alt.", ar:"المنزل قديم."},
+ {de:"Ich gehe zur Arbeit.", ar:"أذهب إلى العمل."},
+ {de:"Ich spiele Fußball.", ar:"ألعب كرة القدم."},
+ {de:"Die Katze läuft schnell.", ar:"القطة تجري بسرعة."},
+ {de:"Wir lernen Deutsch.", ar:"نتعلم الألمانية."},
+ {de:"Ich gehe ins Büro.", ar:"أذهب إلى المكتب."},
+ {de:"Ich schreibe einen Text.", ar:"أكتب نصًا."},
+ {de:"Der Berg ist hoch.", ar:"الجبل مرتفع."},
+ {de:"Ich esse Schokolade.", ar:"آكل الشوكولاتة."},
+ {de:"Ich fahre Zug.", ar:"أذهب بالقطار."},
+ {de:"Ich besuche Berlin.", ar:"أزور برلين."},
+ {de:"Wir essen Mittagessen.", ar:"نتناول الغداء."},
+ {de:"Der Hund bellt.", ar:"الكلب ينبح."},
+ {de:"Wir gehen zur Schule.", ar:"نذهب إلى المدرسة."},
+ {de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."},
+ {de:"Der Tisch ist rund.", ar:"الطاولة دائرية."},
+ {de:"Wir reisen nach Deutschland.", ar:"نسافر إلى ألمانيا."},
+ {de:"Ich spiele Klavier.", ar:"ألعب البيانو."},
+ {de:"Wir besuchen Freunde.", ar:"نزور الأصدقاء."},
+ {de:"Der Film war spannend.", ar:"الفيلم كان مشوقًا."},
+ {de:"Ich mag Tiere.", ar:"أنا أحب الحيوانات."},
+ {de:"Wir gehen ins Theater.", ar:"نذهب إلى المسرح."},
+ {de:"Die Stadt ist groß.", ar:"المدينة كبيرة."}
 ];
-let score = 0;
-let speed = 5000;
-let level = 1;
+let score=0;
+let speed=7000; // سرعة سقوط الجملة
+const gameArea=document.getElementById("game-area");
+const optionsDiv=document.getElementById("options");
+const scoreDiv=document.getElementById("score");
+const correctSound=document.getElementById("correct-sound");
+const wrongSound=document.getElementById("wrong-sound");
 function startGame(){
- const gameArea = document.getElementById("game-area");
- gameArea.innerHTML = "";
- const word = words[Math.floor(Math.random()*words.length)];
- const wordElem = document.createElement("div");
+ gameArea.innerHTML="";
+ optionsDiv.innerHTML="";
+ const word=words[Math.floor(Math.random()*words.length)];
+ const wordElem=document.createElement("div");
  wordElem.classList.add("word");
- wordElem.textContent = word.de;
- wordElem.style.animationDuration = speed/1000+"s";
+ wordElem.textContent=word.de;
+ wordElem.style.animationDuration=(speed/1000)+"s";
  gameArea.appendChild(wordElem);
- const options = document.getElementById("options");
- options.innerHTML = "";
- let answers = [word.ar];
+ // خيارات
+ let answers=[word.ar];
  while(answers.length<3){
-   const wrong = words[Math.floor(Math.random()*words.length)].ar;
-   if(!answers.includes(wrong)) answers.push(wrong);
+   let random=words[Math.floor(Math.random()*words.length)].ar;
+   if(!answers.includes(random)) answers.push(random);
  }
  answers.sort(()=>Math.random()-0.5);
  answers.forEach(ans=>{
@@ -348,26 +187,21 @@ function startGame(){
    btn.onclick=()=>{
      if(ans===word.ar){
        score++;
-       document.getElementById("score").textContent="النقاط: "+score;
-       if(score%5===0){
-         level++;
-         document.getElementById("level").textContent="المرحلة: "+level;
-         speed=Math.max(1500,speed-500);
-         showMessage("🎉 مبروك! انتقلت إلى المرحلة "+level);
-       }
-       startGame();
-     } else{
-       gameArea.classList.add("shake");
-       setTimeout(()=>gameArea.classList.remove("shake"),400);
+       scoreDiv.textContent="النتيجة: "+score;
+       correctSound.play();
+       if(score%5===0 && speed>3000) speed-=500; // زيادة الصعوبة
+     } else {
+       wrongSound.play();
+       document.body.classList.add("shake");
+       setTimeout(()=>document.body.classList.remove("shake"),400);
+       score=0;
+       scoreDiv.textContent="النتيجة: "+score;
+       speed=7000; // إعادة السرعة
      }
+     startGame();
    };
-   options.appendChild(btn);
+   optionsDiv.appendChild(btn);
  });
-}
-function showMessage(text){
- const msg=document.getElementById("message");
- msg.textContent=text;
- setTimeout(()=>msg.textContent="",2000);
 }
 startGame();
 </script>
