--- a/game.html
+++ b/game.html
@@ -3,38 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎮 لعبة الألمانية مع المكافآت</title>
+<title>🎮 لعبة الألمانية مع تأثيرات</title>
 <style>
 body {
  margin:0;
  padding:0;
  font-family:'Cairo', sans-serif;
- background: linear-gradient(135deg,#1d2b64,#f8cdda);
- color:#fff;
+ background:#ffffff;
+ color:#333;
  text-align:center;
  overflow:hidden;
+ transition:background 0.3s;
 }
-h1 {font-size:36px; margin:20px 0;}
+h1 {font-size:36px; margin:20px 0; color:#004e92;}
 #game-area {
  position:relative;
  width:100%;
  height:65vh;
  border-radius:15px;
  overflow:hidden;
- background:rgba(0,0,0,0.2);
- border:3px solid #fff;
+ background:#f0f0f0;
+ border:3px solid #004e92;
 }
 .word {
  position:absolute;
  top:-60px;
  left:50%;
  transform:translateX(-50%);
- font-size:34px;
+ font-size:32px;
  font-weight:bold;
- color:#ffeb3b;
+ color:#ff9800;
  padding:10px 20px;
  border-radius:12px;
- box-shadow:0 2px 10px rgba(0,0,0,0.3);
+ box-shadow:0 2px 10px rgba(0,0,0,0.2);
  animation:fall linear forwards;
 }
 @keyframes fall {
@@ -43,42 +44,48 @@ h1 {font-size:36px; margin:20px 0;}
 }
 #options {display:flex; justify-content:center; flex-wrap:wrap; gap:15px; margin-top:20px;}
 .option {
- background:#fff;
- color:#333;
- font-size:24px;
+ background:#004e92;
+ color:#fff;
+ font-size:22px;
  font-weight:bold;
- padding:15px 25px;
+ padding:12px 20px;
  border-radius:12px;
  cursor:pointer;
- min-width:140px;
+ min-width:120px;
  transition:0.3s;
 }
-.option:hover {background:#ffd54f; transform:scale(1.1);}
-#score, #level, #timer {font-size:26px; font-weight:bold; margin:10px;}
-.shake {animation:shake 0.4s;}
-@keyframes shake {0%{transform:translateX(0);}25%{transform:translateX(-12px);}50%{transform:translateX(12px);}75%{transform:translateX(-12px);}100%{transform:translateX(0);}}
+.option:hover {background:#0077cc; transform:scale(1.05);}
+#score, #level, #timer {font-size:22px; font-weight:bold; margin:10px;}
 #reward {
  position:absolute;
  top:10px;
  left:50%;
  transform:translateX(-50%);
- font-size:30px;
+ font-size:28px;
  font-weight:bold;
- color:#00ff00;
+ color:#00cc44;
  display:none;
- text-shadow: 0 0 10px #fff;
+ text-shadow:0 0 10px #fff;
+}
+.flash-green {animation:flashGreen 0.4s;}
+.flash-red {animation:flashRed 0.4s;}
+@keyframes flashGreen {
+ 0%{background:#ffffff;}50%{background:#ccffcc;}100%{background:#ffffff;}
+}
+@keyframes flashRed {
+ 0%{background:#ffffff;}50%{background:#ffcccc;}100%{background:#ffffff;}
 }
 @media (max-width:600px){
  h1{font-size:28px;}
- .word{font-size:28px; padding:8px 15px;}
- .option{font-size:20px; padding:12px 20px; min-width:120px;}
- #score,#level,#timer{font-size:22px;}
+ .word{font-size:24px; padding:8px 15px;}
+ .option{font-size:18px; padding:10px 15px; min-width:100px;}
+ #score,#level,#timer{font-size:20px;}
  #reward{font-size:24px;}
 }
 </style>
 </head>
 <body>
-<h1>🎮 لعبة الألمانية مع المكافآت</h1>
+<h1>🎮 لعبة الألمانية</h1>
 <div id="score">النقاط: 0</div>
 <div id="level">المرحلة: 1</div>
 <div id="timer">الوقت: 10</div>
@@ -91,6 +98,11 @@ h1 {font-size:36px; margin:20px 0;}
 <script>
 const words = [
  {de:"Wie geht es dir?", ar:"كيف حالك؟"},
+ {de:"Ich liebe dich.", ar:"أنا أحبك."},
+ {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
+ {de:"Ich habe einen Hund.", ar:"لدي كلب."},
+ {de:"Die Katze schläft.", ar:"القطة نائمة."},
+{de:"Wie geht es dir?", ar:"كيف حالك؟"},
  {de:"Ich liebe dich.", ar:"أنا أحبك."},
  {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
  {de:"Ich habe einen Hund.", ar:"لدي كلب."},
@@ -200,6 +212,11 @@ const words = [
  {de:"Die Blume ist rot.", ar:"الزهرة حمراء."},
  {de:"Ich fahre Auto.", ar:"أقود السيارة."},
  {de:"Wir spielen Karten.", ar:"نلعب الورق."}
+ {de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
+ {de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
+ {de:"Es regnet heute.", ar:"تمطر اليوم."},
+ {de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
+ {de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."}
 ];
 let score=0, level=1, speed=7000, timeLeft=10, streak=0;
 let timerInterval;
@@ -212,6 +229,10 @@ const rewardDiv=document.getElementById("reward");
 const correctSound=document.getElementById("correct-sound");
 const wrongSound=document.getElementById("wrong-sound");
 const bonusSound=document.getElementById("bonus-sound");
+function flashScreen(colorClass){
+ document.body.classList.add(colorClass);
+ setTimeout(()=>document.body.classList.remove(colorClass),400);
+}
 function startGame(){
  clearInterval(timerInterval);
  timeLeft=10;
@@ -237,22 +258,20 @@ function startGame(){
    btn.onclick=()=>{
      if(ans===word.ar){
        streak++;
-       score += streak; // النقاط تتضاعف حسب السلسلة
+       score += streak;
        scoreDiv.textContent="النقاط: "+score;
        correctSound.play();
+       flashScreen('flash-green');
        if(streak%3===0){
          rewardDiv.style.display="block";
          bonusSound.play();
          setTimeout(()=>rewardDiv.style.display="none",1000);
-         document.body.style.background="linear-gradient(135deg,#28a745,#c3e6cb)";
-         setTimeout(()=>document.body.style.background="linear-gradient(135deg,#1d2b64,#f8cdda)",500);
        }
        if(score%5===0 && speed>2500) speed-=500;
        startGame();
      } else {
        wrongSound.play();
-       document.body.classList.add("shake");
-       setTimeout(()=>document.body.classList.remove("shake"),400);
+       flashScreen('flash-red');
        streak=0;
        score=0; level=1; speed=7000;
        scoreDiv.textContent="النقاط: "+score;
@@ -268,8 +287,7 @@ function startGame(){
    if(timeLeft<=0){
      clearInterval(timerInterval);
      wrongSound.play();
-     document.body.classList.add("shake");
-     setTimeout(()=>document.body.classList.remove("shake"),400);
+     flashScreen('flash-red');
      streak=0; score=0; level=1; speed=7000;
      scoreDiv.textContent="النقاط: "+score;
      levelDiv.textContent="المرحلة: "+level;
