--- a/game.html
+++ b/game.html
@@ -3,39 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🎮 لعبة الألمانية مع تأثيرات</title>
+<title>🎮 لعبة الألمانية</title>
 <style>
 body {
  margin:0;
  padding:0;
  font-family:'Cairo', sans-serif;
- background:#ffffff;
- color:#333;
+ background:#2c2c2c;
+ color:#fff;
  text-align:center;
  overflow:hidden;
  transition:background 0.3s;
 }
-h1 {font-size:36px; margin:20px 0; color:#004e92;}
+h1 {font-size:36px; margin:20px 0; color:#00bcd4;}
 #game-area {
  position:relative;
  width:100%;
  height:65vh;
  border-radius:15px;
  overflow:hidden;
- background:#f0f0f0;
- border:3px solid #004e92;
+ background:#3a3a3a;
+ border:3px solid #00bcd4;
 }
 .word {
  position:absolute;
  top:-60px;
  left:50%;
  transform:translateX(-50%);
- font-size:32px;
+ font-size:36px;
  font-weight:bold;
- color:#ff9800;
+ color:#ffeb3b;
  padding:10px 20px;
  border-radius:12px;
- box-shadow:0 2px 10px rgba(0,0,0,0.2);
+ box-shadow:0 2px 10px rgba(0,0,0,0.4);
  animation:fall linear forwards;
 }
 @keyframes fall {
@@ -44,9 +44,9 @@ h1 {font-size:36px; margin:20px 0; color:#004e92;}
 }
 #options {display:flex; justify-content:center; flex-wrap:wrap; gap:15px; margin-top:20px;}
 .option {
- background:#004e92;
+ background:#00bcd4;
  color:#fff;
- font-size:22px;
+ font-size:20px;
  font-weight:bold;
  padding:12px 20px;
  border-radius:12px;
@@ -54,7 +54,7 @@ h1 {font-size:36px; margin:20px 0; color:#004e92;}
  min-width:120px;
  transition:0.3s;
 }
-.option:hover {background:#0077cc; transform:scale(1.05);}
+.option:hover {background:#26c6da; transform:scale(1.05);}
 #score, #level, #timer {font-size:22px; font-weight:bold; margin:10px;}
 #reward {
  position:absolute;
@@ -63,21 +63,21 @@ h1 {font-size:36px; margin:20px 0; color:#004e92;}
  transform:translateX(-50%);
  font-size:28px;
  font-weight:bold;
- color:#00cc44;
+ color:#00ff44;
  display:none;
  text-shadow:0 0 10px #fff;
 }
 .flash-green {animation:flashGreen 0.4s;}
 .flash-red {animation:flashRed 0.4s;}
 @keyframes flashGreen {
- 0%{background:#ffffff;}50%{background:#ccffcc;}100%{background:#ffffff;}
+ 0%{background:#2c2c2c;}50%{background:#33ff77;}100%{background:#2c2c2c;}
 }
 @keyframes flashRed {
- 0%{background:#ffffff;}50%{background:#ffcccc;}100%{background:#ffffff;}
+ 0%{background:#2c2c2c;}50%{background:#ff4444;}100%{background:#2c2c2c;}
 }
 @media (max-width:600px){
  h1{font-size:28px;}
- .word{font-size:24px; padding:8px 15px;}
+ .word{font-size:28px; padding:8px 15px;}
  .option{font-size:18px; padding:10px 15px; min-width:100px;}
  #score,#level,#timer{font-size:20px;}
  #reward{font-size:24px;}
@@ -98,11 +98,6 @@ h1 {font-size:36px; margin:20px 0; color:#004e92;}
 <script>
 const words = [
  {de:"Wie geht es dir?", ar:"كيف حالك؟"},
- {de:"Ich liebe dich.", ar:"أنا أحبك."},
- {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
- {de:"Ich habe einen Hund.", ar:"لدي كلب."},
- {de:"Die Katze schläft.", ar:"القطة نائمة."},
-{de:"Wie geht es dir?", ar:"كيف حالك؟"},
  {de:"Ich liebe dich.", ar:"أنا أحبك."},
  {de:"Wo ist der Bahnhof?", ar:"أين تقع محطة القطار؟"},
  {de:"Ich habe einen Hund.", ar:"لدي كلب."},
@@ -151,72 +146,7 @@ const words = [
  {de:"Wir essen Mittagessen.", ar:"نتناول الغداء."},
  {de:"Der Hund bellt.", ar:"الكلب ينبح."},
  {de:"Wir gehen zur Schule.", ar:"نذهب إلى المدرسة."},
- {de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."},
- {de:"Der Tisch ist rund.", ar:"الطاولة دائرية."},
- {de:"Wir reisen nach Deutschland.", ar:"نسافر إلى ألمانيا."},
- {de:"Ich spiele Klavier.", ar:"ألعب البيانو."},
- {de:"Wir besuchen Freunde.", ar:"نزور الأصدقاء."},
- {de:"Der Film war spannend.", ar:"الفيلم كان مشوقًا."},
- {de:"Ich mag Tiere.", ar:"أنا أحب الحيوانات."},
- {de:"Wir gehen ins Theater.", ar:"نذهب إلى المسرح."},
- {de:"Die Stadt ist groß.", ar:"المدينة كبيرة."},
- {de:"Es ist dunkel draußen.", ar:"الجو مظلم في الخارج."},
- {de:"Ich trinke Tee.", ar:"أنا أشرب الشاي."},
- {de:"Die Lampe ist hell.", ar:"المصباح مضيء."},
- {de:"Ich lese ein Buch.", ar:"أقرأ كتابًا."},
- {de:"Wir fahren Auto.", ar:"نقود السيارة."},
- {de:"Die Kinder lernen.", ar:"الأطفال يتعلمون."},
- {de:"Ich male ein Bild.", ar:"أرسم صورة."},
- {de:"Das Fenster ist offen.", ar:"النافذة مفتوحة."},
- {de:"Ich esse Brot.", ar:"آكل خبزًا."},
- {de:"Die Uhr tickt.", ar:"الساعة تدق."},
- {de:"Wir gehen ins Kino.", ar:"نذهب إلى السينما."},
- {de:"Es ist kalt heute.", ar:"الجو بارد اليوم."},
- {de:"Ich schwimme im Meer.", ar:"أسبح في البحر."},
- {de:"Die Straße ist lang.", ar:"الشارع طويل."},
- {de:"Ich kaufe Gemüse.", ar:"أشتري خضارًا."},
- {de:"Wir trinken Saft.", ar:"نشرب عصيرًا."},
- {de:"Das Fahrrad ist neu.", ar:"الدراجة جديدة."},
- {de:"Ich liebe Musik.", ar:"أحب الموسيقى."},
- {de:"Der Vogel singt.", ar:"العصفور يغني."},
- {de:"Wir gehen wandern.", ar:"نذهب في نزهة."},
- {de:"Ich spiele Tennis.", ar:"ألعب التنس."},
- {de:"Das Wasser ist kalt.", ar:"الماء بارد."},
- {de:"Wir essen Obst.", ar:"نأكل فواكه."},
- {de:"Ich koche Suppe.", ar:"أطبخ حساء."},
- {de:"Die Blume blüht.", ar:"الزهرة تتفتح."},
- {de:"Ich trage Schuhe.", ar:"أرتدي حذاءً."},
- {de:"Wir fahren Fahrrad.", ar:"نركب الدراجة."},
- {de:"Der Hund schläft.", ar:"الكلب نائم."},
- {de:"Ich sehe die Sterne.", ar:"أرى النجوم."},
- {de:"Die Katze miaut.", ar:"القطة تموء."},
- {de:"Ich trinke Milch.", ar:"أشرب الحليب."},
- {de:"Wir gehen einkaufen.", ar:"نذهب للتسوق."},
- {de:"Der Film ist spannend.", ar:"الفيلم مشوق."},
- {de:"Ich schreibe Briefe.", ar:"أكتب رسائل."},
- {de:"Wir essen Abendessen.", ar:"نتناول العشاء."},
- {de:"Die Sonne geht unter.", ar:"تغرب الشمس."},
- {de:"Ich fahre Bus.", ar:"أركب الحافلة."},
- {de:"Wir gehen ins Restaurant.", ar:"نذهب إلى المطعم."},
- {de:"Der Apfel ist süß.", ar:"التفاحة حلوة."},
- {de:"Ich lerne Deutsch.", ar:"أتعلم الألمانية."},
- {de:"Die Lampe ist aus.", ar:"المصباح مطفأ."},
- {de:"Ich trinke Kaffee.", ar:"أشرب القهوة."},
- {de:"Wir gehen spazieren.", ar:"نذهب للتنزه."},
- {de:"Das Buch ist schwer.", ar:"الكتاب ثقيل."},
- {de:"Ich koche Reis.", ar:"أطبخ الأرز."},
- {de:"Wir hören Musik.", ar:"نستمع إلى الموسيقى."},
- {de:"Der Hund ist groß.", ar:"الكلب كبير."},
- {de:"Ich gehe schlafen.", ar:"أذهب للنوم."},
- {de:"Wir essen Kuchen.", ar:"نأكل الكعك."},
- {de:"Die Blume ist rot.", ar:"الزهرة حمراء."},
- {de:"Ich fahre Auto.", ar:"أقود السيارة."},
- {de:"Wir spielen Karten.", ar:"نلعب الورق."}
- {de:"Ich trinke Wasser.", ar:"أنا أشرب ماءً."},
- {de:"Der Himmel ist blau.", ar:"السماء زرقاء."},
- {de:"Es regnet heute.", ar:"تمطر اليوم."},
- {de:"Das Auto ist schnell.", ar:"السيارة سريعة."},
- {de:"Wir fahren nach Berlin.", ar:"نحن ذاهبون إلى برلين."}
+ {de:"Ich habe keine Ahnung.", ar:"ليس لدي أي فكرة."}
 ];
 let score=0, level=1, speed=7000, timeLeft=10, streak=0;
 let timerInterval;
